# personal-admin

./: .env.example  .gitignore  README.md  app.py  manage.py  pyproject.toml
notepad/: admin.py  models.py  tests.py  views.py
notepad/migrations/: 0001_initial.py  0002_note_title.py  0003_attachment.py
ops/nginx/: admin.pujia.ar.conf  admin.pujia.ar.http.conf  pujia.ar.conf
ops/systemd/: pujia-admin.service
personal_admin/: asgi.py  cli.py  settings.py  urls.py  wsgi.py
redirects/: admin.py  apps.py  forms.py  logic.py  models.py  tests.py  views.py
redirects/migrations/: 0001_initial.py
redirects/templates/redirects/: home.html
scripts/: install-systemd  sync-basic-auth
static/: redirects.js  style.css
templates/: _redirects_content.html  base.html  dashboard.html  redirects.html
tests/: test_app.py
