[project]
name = "pujia-admin"
version = "0.1.0"
description = "Minimal admin dashboard for pujia.ar"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.1.1",
  "waitress>=3.0.2",
]

[project.scripts]
pujia-admin = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "/app.py",
  "/templates",
  "/static",
  "/data/.gitkeep",
]

[tool.hatch.build.targets.sdist]
include = [
  "/app.py",
  "/templates",
  "/static",
  "/data/.gitkeep",
  "/pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
