[project]
name = "personal-admin"
version = "0.1.0"
description = "Minimal personal admin dashboard for random stuff"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.1.1",
  "python-dotenv>=1.2.2",
  "waitress>=3.0.2",
]

[project.scripts]
start = "app:start"
dev = "app:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "/app.py",
  "/templates",
  "/static",
]

[tool.hatch.build.targets.sdist]
include = [
  "/app.py",
  "/templates",
  "/static",
  "/pyproject.toml",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "ruff>=0.15.18",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
include = [
    "app.py",
]
exclude = [
    "**/__pycache__",
    ".venv",
]
