[project]
name = "personal-admin"
version = "0.1.0"
description = "Minimal personal admin dashboard for random stuff"
requires-python = ">=3.11"
dependencies = [
  "django>=5.2.6",
  "python-dotenv>=1.2.2",
  "waitress>=3.0.2",
  "whitenoise>=6.11.0",
]

[project.scripts]
start = "personal_admin.cli:start"
dev = "personal_admin.cli:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "/manage.py",
  "/notepad",
  "/personal_admin",
  "/redirects",
]

[tool.hatch.build.targets.sdist]
include = [
  "/manage.py",
  "/notepad",
  "/personal_admin",
  "/redirects",
  "/pyproject.toml",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "ruff>=0.15.18",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
include = [
    "manage.py",
    "notepad",
    "personal_admin",
    "redirects",
]
exclude = [
    "**/__pycache__",
    ".venv",
    "redirects/migrations",
]
